refactor: 회사 검색 API 리팩토링
- 회사 검색 API 리팩토링
- 레디스 캐시 적용
- 레디스 캐시 키 추가